<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hb.neuropsych_5_numeric.NumericMainInput">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/numeric_header"
        >


        <TextView
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pair_intro_title"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/seaco"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:id="@+id/numeric_input_rl"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numpad_instruction"
            android:textSize="25sp"
            android:id="@+id/textView"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numInput"
            android:background="#dddddd"
            android:textSize="24sp"
            android:hint="@string/hint_type_here"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/numpad_submit_button"
            android:id="@+id/submit_button"
            android:onClick="checkAnswer"
            android:background="@drawable/button_green_res"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@id/numInput" />





    </RelativeLayout>

    <Button
        android:onClick="numericSkip"
        android:text="@string/button_skip"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/button_pink_res"

        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
