<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/lights_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lights_bg"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="true"
        android:gravity="top|center" />

    <RelativeLayout
        android:id="@+id/lights_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" >

        <TextView
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lights_title"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/seaco"
            android:textColor="@android:color/white" />
    </RelativeLayout>

<RelativeLayout
    android:id="@+id/windowsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:layout_marginTop="0dp"
    android:layout_marginStart="100dp"
    android:layout_marginLeft="100dp" >

    <ImageButton android:id="@+id/window01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/start_y"
        android:layout_marginStart="@dimen/start_x"
        android:layout_marginLeft="@dimen/start_x"
        android:background="@null"
        android:contentDescription="@string/window1"
        android:src="@drawable/light_off"
        android:visibility="gone" />

    <ImageButton android:id="@+id/window02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/window01"
        android:layout_alignLeft="@+id/window01"
        android:layout_marginTop="@dimen/start_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window2"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/window02"
        android:layout_alignStart="@+id/window04"
        android:layout_alignLeft="@+id/window04"
        android:layout_marginTop="150dp"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window3"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window01"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/start_x"
        android:layout_marginLeft="@dimen/start_x"
        android:background="@null"
        android:contentDescription="@string/window4"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/window02"
        android:layout_alignLeft="@+id/window02"
        android:layout_marginTop="@dimen/start_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window5"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window05"
        android:layout_alignStart="@+id/window03"
        android:layout_alignLeft="@+id/window03"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window6"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window06"
        android:layout_alignStart="@+id/window08"
        android:layout_alignLeft="@+id/window08"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window7"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window03"
        android:layout_alignStart="@+id/window09"
        android:layout_alignLeft="@+id/window09"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window8"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window04"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/start_x"
        android:layout_marginLeft="@dimen/start_x"
        android:background="@null"
        android:contentDescription="@string/window9"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/window05"
        android:layout_alignLeft="@+id/window05"
        android:layout_marginTop="@dimen/start_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window10"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window10"
        android:layout_alignStart="@+id/window06"
        android:layout_alignLeft="@+id/window06"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window11"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window11"
        android:layout_alignStart="@+id/window07"
        android:layout_alignLeft="@+id/window07"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window12"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window12"
        android:layout_alignStart="@+id/window14"
        android:layout_alignLeft="@+id/window14"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window13"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window07"
        android:layout_alignStart="@+id/window15"
        android:layout_alignLeft="@+id/window15"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window14"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window08"
        android:layout_alignStart="@+id/window16"
        android:layout_alignLeft="@+id/window16"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/space_x"
        android:layout_marginLeft="@dimen/space_x"
        android:background="@null"
        android:contentDescription="@string/window15"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>

    <ImageButton android:id="@+id/window16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/window09"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/space_y"
        android:layout_marginStart="@dimen/start_x"
        android:layout_marginLeft="@dimen/start_x"
        android:background="@null"
        android:contentDescription="@string/window16"
        android:src="@drawable/light_off"
        android:visibility="gone"
        android:paddingBottom="30dp"/>
</RelativeLayout>

    <TextView android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lights_bg"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <Button android:id="@+id/next_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_green_res"
        android:minHeight="0dp"
        android:layout_centerHorizontal="true"
        android:text="@string/next_button" />

</RelativeLayout>
