<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/main_bg"
    tools:context="com.seaco.seaconeuropsych.EndBranch">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/congratulations"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/end_branch_message"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/imageView4"
        />

    <Button
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/end_branch_button_numeric"
        android:id="@+id/button15"
        android:layout_below="@id/textView3"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_green_res"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:onClick="yesContinue3"/>

    <Button
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/end_branch_button_lights"
        android:layout_below="@id/button15"
        android:background="@drawable/button_blue_res"
        android:id="@+id/button17"
        android:layout_centerHorizontal="true"
        android:onClick="yesContinue6"
        android:textSize="22sp"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/end_branch_button_save"
        android:layout_below="@id/button17"
        android:id="@+id/button16"
        android:background="@drawable/button_pink_res"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="endActivity"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:fontFamily="fonts/Avenir_Black.ttf"/>





</RelativeLayout>
